Import of PERLANCAR/Sys-Run-Safer-0.03.tar.gz from CPAN.
gitpan-cpan-distribution: Sys-Run-Safer
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PERLANCAR/Sys-Run-Safer-0.03.tar.gz
gitpan-cpan-author:       PERLANCAR
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -9,6 +9,7 @@ build_requires:
   Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
+  Perl::osnames: '0.09'
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.143240'
 license: perl
@@ -24,7 +25,7 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Sys-Run-Safer
   homepage: https://metacpan.org/release/Sys-Run-Safer
   repository: git://github.com/perlancar/perl-Sys-Run-Safer.git
-version: '0.02'
+version: '0.03'
 x_Dist_Zilla:
   perl:
     version: '5.018002'
@@ -128,7 +129,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GenShellCompletion
       name: '@Author::PERLANCAR/GenShellCompletion'
-      version: '0.05'
+      version: '0.07'
     -
       class: Dist::Zilla::Plugin::OurDate
       name: '@Author::PERLANCAR/OurDate'
